--- a/rsschool-cv/index.html
+++ b/rsschool-cv/index.html
@@ -236,7 +236,7 @@
               c = Math.floor(amount / elMax);
               amount = amount - c * elMax;
               coinDenom = coinDenom
-                  .filter(el => el <= amount);
+                  .filter(el => el &lt;= amount);
               k = k + c;
             };
           return k;
